--- a/personalportfolio/src/App.css
+++ b/personalportfolio/src/App.css
@@ -1,3 +1,14 @@
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	background-color: #cad2c5;
+	font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+	width: 90%;
+	margin: auto;
+	padding: 1em;
+}
 .App {
-	background-color: grey;
+	background-color: #52796f;
 }
