--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -42,8 +42,13 @@
 		}
 	}
 }
-#nav {
-	position: fixed;
+.navbar {
 	width: 100%;
-	background-color: #121212;
+	background-color: #12121250;
+}
+.sticky {
+	position: sticky;
+	top: 0;
+	width: 100%;
+	background-color: #121212e6;
 }
