--- a/src/components/skillscard/skillscard.scss
+++ b/src/components/skillscard/skillscard.scss
@@ -1,4 +1,14 @@
-.mdNav a {
+.resumeitem::before {
+	content: "";
+	position: absolute;
+	width: 15px;
+	height: 15px;
+	left: -9px;
+	top: 0;
+	background: #fff;
+	border: 1px solid #0e9594;
+}
+.resumedlbutton {
 	position: relative;
 	display: block;
 	color: #0e9594;
@@ -41,17 +51,4 @@
 			opacity: 1;
 		}
 	}
-}
-
-.navbar {
-	width: 100%;
-	background-color: #12121250;
-	z-index: 4;
-}
-.sticky {
-	position: sticky;
-	top: 0;
-	width: 100%;
-	background-color: #121212e6;
-	z-index: 1;
 }
