--- a/src/components/pages/resume/resumecontent/resumecontent.scss
+++ b/src/components/pages/resume/resumecontent/resumecontent.scss
@@ -6,7 +6,7 @@
 	left: -9px;
 	top: 0;
 	background: #121212;
-	border: 2px solid #0e9594;
+	border: 2px solid pink;
 }
 .resumedlbutton {
 	position: relative;
