--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,11 @@
-#tsparticles {
-	position: fixed;
-	height: 100%;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	left: 0;
-	top: 0;
-	z-index: -1;
-}
 #root {
 	position: relative;
 	min-height: 100vh;
 	overflow: auto;
+	display: grid;
+	justify-content: center;
 }
 .container {
+	width: 90vw;
 	padding-bottom: 72px;
 }
