--- a/src/components/pages/resume/resumecontent/resumecontent.scss
+++ b/src/components/pages/resume/resumecontent/resumecontent.scss
@@ -5,8 +5,8 @@
 	height: 16px;
 	left: -9px;
 	top: 0;
-	background: #121212;
-	border: 2px solid pink;
+	background: #1f1f1f;
+	border: 2px solid #0e9594;
 }
 .resumedlbutton {
 	position: relative;
